@@ -156,6 +156,13 @@ by the user, by using the <guibutton>Reset Filter</guibutton> button or
 changing the options on the <guilabel>Filter</guilabel> page of the
 widget.</para>
 
+    <note>
+      <para>In GTK+ 2.2 and above the <link
+linkend="class-gtkfileselectiondialog"><classname>gtk.FileSelectionDialog</classname></link>
+does not have filters, a <guibutton>Reset Filter</guibutton> button or a
+<guilabel>Filter</guilabel> page.</para>
+    </note>
+
   </refsect1>
 
   <refsect1 id="constructor-gtkfontselectiondialog">
