@@ -8,6 +8,9 @@
 	* pygtk-gtkfontbutton.xml Add purpose description. Fix 
 	GtkFontSelectionDialog links.
 
+	* pygtk-gtkfontselectiondialog.xml Add note about lack of font filters,
+	etc. in GTK+ 2.2 and above.
+
 2004-04-07  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkfilechooser.xml Add.
